syntax = "proto3";
package com.baiyu.yim.sdk.server.model.proto;
option java_outer_classname="SessionProto";
message Model {
   int64 id = 1;
   string account = 2;
   string nid = 3;
   string deviceId = 4;
   string host = 5;
   string channel = 6;
   string deviceModel = 7;
   string clientVersion = 8;
   string systemVersion = 9;
   int64 bindTime = 10;
   double longitude = 11;
   double latitude = 12;
   string location = 13;
   int32 apns = 14;
   int32 state = 15;
}
